fix: missing extra padding w/buttons

--- a/apps/dev-the-spiciest/src/app/pages/home/home.component.scss
+++ b/apps/dev-the-spiciest/src/app/pages/home/home.component.scss
@@ -12,7 +12,7 @@
   background-repeat: no-repeat;
   @media screen and (max-width: 768px) {
     background-image: url(https://d33v6bah4t8f39.cloudfront.net/angular-cup-twitter.jpg);
-    padding-bottom: 64px;
+    padding-bottom: 192px;
   }
   @media screen and (min-width: 769px) {
     background-image: url(https://d33v6bah4t8f39.cloudfront.net/angular-cup-cover.jpg);
